--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+server.port=2019
+
+spring.jackson.serialization.fail-on-empty-beans=false
 
